--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,13 @@
 html {
   font-family: "Inter", sans-serif;
-  background-color: black;
 }
 
-/** code by webdevtrick ( https://webdevtrick.com ) 
 body {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  background-color: #FF4D50;
-  font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+  background-color: black;
+  font-size: 100%;
 }
-**/
-body,
+
+header,
 .home-menu,
 .menu {
   display: flex;
@@ -87,4 +82,9 @@ body,
 
 h1 {
   color: #fff;
+  text-align: center;
+  font-size: 8em;
+}
+
+footer {
 }
