--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,9 @@
     background-image: url('img_flowers.jpg');
   }
 }
+*/
 
-
-For devices 445px and smaller: 
+/* For devices 445px and smaller: 
 @media only screen and (max-device-width: 445px) {
   body {
     background-image: url('img_flowers.jpg');
@@ -19,25 +19,33 @@ html {
 }
 
 body {
+  border: 1px solid yellow;
   background-color: black;
   font-size: 100%;
+}
+
+header {
+  border: 1px solid blue;
 }
 
 header,
 .home-menu,
 .menu {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
+  flex-direction: left;
   align-items: center;
   text-align: center;
 }
+
 .home-menu {
+  border: 1px solid #fff;
   position: relative;
   background-color: black;
   padding: 20px;
   transition: 0.5s;
-  overflow: scroll;
 }
+
 .menu {
   margin: 0;
   padding: 0;
@@ -45,6 +53,7 @@ header,
   overflow: scroll;
   transition: 0.5s;
 }
+
 .home-menu input:checked ~ .menu {
   width: 500px;
 }
@@ -97,23 +106,36 @@ header,
   display: none;
 }
 
+.appstore-container {
+  border: 1px solid red;
+  justify-content: flex-start;
+}
+
+.appstore-container img {
+  border: 1px solid yellowgreen;
+}
+
 h1 {
+  border: 1px solid #fff;
   color: #fff;
   text-align: center;
   font-size: 5em;
 }
 
 .img-container {
+  border: 1px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 80%;
+  max-width: 60%;
   margin: 0 auto;
 }
 
 .img-container img {
+  border: 1px solid #fff;
   max-width: 100%;
   height: auto;
+  /*align-self: flex-end; */
 }
 
 /*footer {
