--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
   }
 }
 */
+ 
 
 /* For devices 445px and smaller: 
 @media only screen and (max-device-width: 445px) {
@@ -22,98 +23,19 @@ body {
   border: 1px solid yellow;
   background-color: black;
   font-size: 100%;
+  
 }
 
 header {
   border: 1px solid blue;
 }
 
-header,
-.home-menu,
-.menu {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: left;
-  align-items: center;
-  text-align: center;
-}
-
 .home-menu {
-  border: 1px solid #fff;
+  border: 1px solid green;
   position: relative;
-  background-color: black;
   padding: 20px;
   transition: 0.5s;
-}
-
-.menu {
   margin: 0;
-  padding: 0;
-  width: 0;
-  overflow: scroll;
-  transition: 0.5s;
-}
-
-.home-menu input:checked ~ .menu {
-  width: 500px;
-}
-.menu li {
-  list-style: none;
-  margin: 0 10px;
-}
-.menu li a {
-  text-decoration: none;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 600;
-  transition: 0.5s;
-}
-.menu li a:hover {
-  color: #fff;
-}
-.home-menu input {
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  opacity: 0;
-}
-.home-menu span {
-  position: absolute;
-  left: 30px;
-  width: 30px;
-  height: 4px;
-  border-radius: 50px;
-  background-color: #fff;
-  pointer-events: none;
-  transition: 0.5s;
-}
-.home-menu input:checked ~ span {
-  background-color: #fff;
-}
-.home-menu span:nth-child(2) {
-  transform: translateY(-8px);
-}
-.home-menu input:checked ~ span:nth-child(2) {
-  transform: translateY(0) rotate(-45deg);
-}
-.home-menu span:nth-child(3) {
-  transform: translateY(8px);
-}
-.home-menu input:checked ~ span:nth-child(3) {
-  transform: translateY(0) rotate(45deg);
-}
-.home-menu input:checked ~ span:nth-child(4) {
-  display: none;
-}
-
-.appstore-container {
-  border: 1px solid pink;
-  justify-content: flex-start;
-  margin: 0;
-}
-
-.appstore-container img {
-  border: 1px solid yellowgreen;
 }
 
 h1 {
@@ -121,8 +43,14 @@ h1 {
   color: #fff;
   text-align: center;
   font-size: 5em;
+  font-weight: bold;
 }
-
+.main-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 .img-container {
   border: 1px solid red;
   display: flex;
@@ -134,11 +62,20 @@ h1 {
 
 .img-container img {
   border: 1px solid #fff;
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
-  /*align-self: flex-end; */
+}
+.appstore-container {
+  border: 1px solid pink;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  
 }
 
+.appstore-container img {
+  border: 1px solid yellowgreen;
+}
 /*footer {
 }
 */
