--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* For devices 1000px and larger: 
+/* For devices 391px and larger: 
 @media only screen and (min-device-width: 1000px) {
   body {
     background-image: url('img_flowers.jpg');
@@ -21,12 +21,53 @@ header {
   border: 1px solid blue;
 }
 
-.home-menu {
-  border: 1px solid green;
+.dropdown {
+  border: none;
   position: relative;
-  padding: 20px;
   transition: 0.5s;
-  margin: 0;
+  margin: 10px;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #04aa6d;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 10px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
 
 h1 {
@@ -59,14 +100,12 @@ h1 {
 .appstore-container {
   border: 1px solid pink;
   bottom: 0;
+  margin: 10px;
 }
 
 .appstore-container img {
   border: 1px solid yellowgreen;
 }
-/*footer {
-}
-*/
 
 /* For devices 390px and smaller: */
 @media only screen and (max-device-width: 390px) {
